auto-test/tests/chapter_18/invalid_parse/extra_credit/union_member_storage_class.c
union y {
    
    static int a;
};